<resources>
    <string name="app_name">Recipe App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login" translatable="false">Login</string>
    <string name="sin_up" translatable="false">Sign Up</string>
    <string name="email_address" translatable="false">Email Address</string>
    <string name="password" translatable="false">Password</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="forget_pass" translatable="false">Forgot Password?</string>

    <string name="are_you_sure" translatable="false">Are You Sure?</string>
    <string name="confirm_signout" translatable="false"> Do you really want to sign out? </string>

    <string name="dont" translatable="false">Don"'"t have an account? Create new account.</string>

    <!-- Home Strings -->
    <string name="welcome" translatable="false">Hi !!</string>
    <string name="intro" translatable="false">What are you cooking today ?</string>
    <string name="all" translatable="false">All Recipes</string>
    <string name="sign_out" translatable="false">Sign out</string>
    <string name="about" translatable="false">About</string>
    <string name="search" translatable="false">What Do You Want To Search for ?</string>
    <string name="search_hint" translatable="false">Search for a Recipe ?</string>
    <string-array name="char_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

</resources>