<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user_data.login.LoginFragment"
    >

    <ImageView
        android:id="@+id/image_dish"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/dish_image"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:elevation="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/image_dish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="377dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/logMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <EditText
                android:id="@+id/logPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/forget_pass"
                android:textColor="@color/holo_orange_light"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="16dp"
                android:backgroundTint="#FFA500"
                android:text="@string/login"
                android:textColor="@android:color/white"
                />

            <TextView
                android:id="@+id/txtSignUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/dont"
                android:textColor="@color/holo_orange_light"
                android:layout_marginBottom="100dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>