<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/holo_orange_light"
            android:textStyle="bold"
            android:textSize="45sp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/ques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/hi"
            app:layout_constraintStart_toStartOf="@id/hi"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:elevation="6dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/option_menu"/>

        <ImageSwitcher
            android:id="@+id/imgSwitcher"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/imgs_container_with_border"
            app:layout_constraintTop_toBottomOf="@id/ques"/>
        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/holo_orange_light"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgSwitcher"/>
        <Spinner
            android:id="@+id/chars"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:hint="Char"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/imgs_container"
            android:paddingHorizontal="50dp"
            android:entries="@array/char_array"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/all"
            app:layout_constraintBottom_toBottomOf="@id/all"
            android:layout_marginTop="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/all"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_recipe"
            android:orientation="vertical"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>